--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,7 +103,7 @@ venv.bak/
 WoodScape_ICCV19/
 
 #data configuration
-omnidet/data/
+#omnidet/data/
 
 # mypy
 .mypy_cache/
@@ -120,18 +119,4 @@ omnidet/results_final.csv
 omnidet/results_final.json
 omnidet/runs/
 omnidet/models/AEs/results_models_resnet_ae/
-=======
-dec.yuv
-rec.yuv
-str.bin
-/build/
-/bin/
-/lib/
-core
-deploy
-*.sdf
-*.suo
-*.pyc
-.vs/
-.vscode/
->>>>>>> HM/master
+
